--- a/src/tgbot/templates/tgbot/index.html
+++ b/src/tgbot/templates/tgbot/index.html
@@ -2,4 +2,30 @@
 
 {% block title %}Index{% endblock %}
 
-{% block body %}{{ page_place }}<p>{{ system }}</p>{% endblock %}
+{% block body %}
+<div>
+<form action="" method="post">
+    {% csrf_token %}
+    <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Ваш номер телефона</label>
+        <input type="text" name="form.phone_number.name" class="form-control">
+    </div>
+    <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Ваше имя</label>
+        <input type="text" name="form.name.name" class="form-control">
+    </div>
+    <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Покупка совершена?</label>
+        {{ form.purchase }}
+    </div>
+    <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Комментарий</label>
+        <input type="text" name="form.extra_message.name" class="form-control">
+    </div>
+    <div class="form-group row">
+    <div class="col-sm-12">
+      <button type="submit" class="btn btn-primary">Sign in</button>
+    </div>
+  </div>
+    </form>
+    </div>{% endblock %}
