--- a/src/tgmarket/templates/__base.html
+++ b/src/tgmarket/templates/__base.html
@@ -1,10 +1,75 @@
-<!DOCTYPE html>
+{% load static %}
+
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+
     <title>Web-bot::{% block title %}{% endblock %}</title>
-</head>
-<body>
-Web-bot:{% block body %}{% endblock %}
-</body>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <style>
+      html{
+          height: 100%;
+          max-height: 100%;
+      }
+      body{
+          height: 100%;
+          max-height: 100%;
+        background-attachment: fixed;
+          background-image:  url("{% static 'img/darkbackground.jpg' %}" );
+      }
+      .top-container{
+          margin-top: 5%;
+      }
+      middle-text{
+          align-content: center;
+          font-family: Arial, sans-serif;
+
+          font-style: italic;
+      }
+  </style>
+  </head>
+  <body>
+    <div id="preloader">
+        <div class="preloader">
+            <span></span>
+            <span></span>
+        </div>
+    <nav class="navbar navbar-light bg-light">
+  <a class="navbar-brand" href="#">
+    <img src="/docs/4.5/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+    Market
+      <div class="btn-group">
+  <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" data-display="static" aria-haspopup="true" aria-expanded="false">
+    Sections
+  </button>
+  <div class="dropdown-menu dropdown-menu-right dropdown-menu-lg-left">
+    <button class="dropdown-item" type="button">Art</button>
+    <button class="dropdown-item" type="button">Posters</button>
+    <button class="dropdown-item" type="button">Boxes</button>
+      <button class="dropdown-item" type="button">About me</button>
+  </div>
+</div>
+  </a>
+</nav>
+  <div class="general-container">
+  <div class="container top-container">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-4">
+                <h1 align="center">Магазин скоро откроется</h1>
+            </div>
+        </div>
+    </div>
+    {% block body %}{% endblock %}
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  </div>
+  </div>
+  </body>
 </html>
