--- a/src/tgmarket/templates/__base.html
+++ b/src/tgmarket/templates/__base.html
@@ -11,7 +11,8 @@
 
     <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <style>
+  <link rel="stylesheet" type="text/css" href="{% static 'css/backgroundapp.css' %}">
+      <style>
       html{
           height: 100%;
           max-height: 100%;
@@ -21,16 +22,24 @@
           max-height: 100%;
         background-attachment: fixed;
           background-image:  url("{% static 'img/darkbackground.jpg' %}" );
+          margin-bottom: 300px;
       }
       .top-container{
           margin-top: 5%;
       }
-      middle-text{
+      .middle-text{
           align-content: center;
           font-family: Arial, sans-serif;
 
           font-style: italic;
       }
+      .product-item{
+    height: 300px;
+    background: whitesmoke;
+    position: relative;
+          margin-bottom: 25px;
+
+}
   </style>
   </head>
   <body>
@@ -39,33 +48,98 @@
             <span></span>
             <span></span>
         </div>
-    <nav class="navbar navbar-light bg-light">
+   <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">
-    <img src="/docs/4.5/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
-    Market
-      <div class="btn-group">
-  <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" data-display="static" aria-haspopup="true" aria-expanded="false">
-    Sections
+      <img src="/assets/brand/bootstrap-solid.svg" width="30" height="30" alt="">
+      Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="dropdown-menu dropdown-menu-right dropdown-menu-lg-left">
-    <button class="dropdown-item" type="button">Art</button>
-    <button class="dropdown-item" type="button">Posters</button>
-    <button class="dropdown-item" type="button">Boxes</button>
-      <button class="dropdown-item" type="button">About me</button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Features</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Pricing</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#">Disabled</a>
+      </li>
+    </ul>
   </div>
-</div>
-  </a>
 </nav>
   <div class="general-container">
   <div class="container top-container">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-4">
-                <h1 align="center">Магазин скоро откроется</h1>
+                <H1 align="center">Магазин скоро откроется</H1>
             </div>
         </div>
     </div>
     {% block body %}{% endblock %}
+    <footer class="bg-light text-center text-lg-left fixed-bottom">
+  <!-- Grid container -->
+  <div class="container p-4">
+    <!--Grid row-->
+    <div class="row">
+      <!--Grid column-->
+      <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+        <h5 class="text-uppercase">Site description</h5>
+
+        <p>
+          Here you can find some art works crated by Mary Mordas. You will be able o buy anything you like, and also you will know about all new art-works.
+        </p>
+      </div>
+      <!--Grid column-->
+
+      <!--Grid column-->
+      <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+        <h5 class="text-uppercase">Links of Mordas Mary</h5>
+
+        <ul class="list-unstyled mb-0">
+          <li>
+            <a href="https://vk.com/mordas07" class="text-dark">VK</a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/mmordas07/" class="text-dark">Instagram</a>
+          </li>
+        </ul>
+      </div>
+      <!--Grid column-->
+
+      <!--Grid column-->
+      <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+        <h5 class="text-uppercase mb-0">Links of web-site creator</h5>
+
+        <ul class="list-unstyled">
+          <li>
+            <a href="#!" class="text-dark">Link 1</a>
+          </li>
+          <li>
+            <a href="#!" class="text-dark">Link 2</a>
+          </li>
+        </ul>
+      </div>
+      <!--Grid column-->
+    </div>
+    <!--Grid row-->
+  </div>
+  <!-- Grid container -->
+
+  <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    © 2020 Copyright:
+    <a class="text-dark" href="https://mdbootstrap.com/">MaryMordas</a>
+  </div>
+  <!-- Copyright -->
+</footer>
+<!-- Footer -->
+<!-- Footer -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
