--- a/src/tgmarket/static/css/backgroundapp.css
+++ b/src/tgmarket/static/css/backgroundapp.css
@@ -6,6 +6,14 @@
     text-align: center;
     align-items: center;
 }
+.product-item-detailed{
+       height: 500px;
+    background: whitesmoke;
+    position: relative;
+    padding: 5px;
+    text-align: center;
+    align-items: center;
+}
 .product-button{
    position: absolute;
     bottom: 10px;
