--- a/src/tgbot/templates/tgbot/test.html
+++ b/src/tgbot/templates/tgbot/test.html
@@ -1,2 +1,33 @@
-{% extends _base.html %}
-{% load static %}
+<nav class="navbar fixed-top navbar-light bg-light navigation">
+ <a class="navbar-brand" href="#">
+    <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+    Bootstrap
+  </a>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link" href="#">Features</a>
+      <a class="nav-item nav-link" href="#">Pricing</a>
+      <a class="nav-item nav-link disabled" href="#">Disabled</a>
+    </div>
+    <ul class="nav navbar-nav navbar-right">
+            <li>
+                <div class="basket-container">
+                    <a href="">Корзина <span id="basket_total_amount"></span></a>
+                    <div class="basket-items hidden">
+                        <ul class="">
+                            <li>wewe</li>
+                        </ul>
+                    </div>
+                </div>
+            </li>
+
+          </ul>
+  </div>
+</nav>
+</nav>
