--- a/src/products/templates/products/index.html
+++ b/src/products/templates/products/index.html
@@ -11,18 +11,7 @@
             <div class="row">
                 {% for obj in object_list %}
                     {% if obj.product.product_type == "P" %}
-                        <div class="col-sm-4">
-                            <div class="product-item">
-                                <div>
-                                    <img src="{{ obj.image.url }}" class="img-responsive">
-                                </div>
-                                <h4><a href="{{ obj.get_absolute_url }}">{{ obj.product.product_name }}</a></h4>
-                                <p>{{ obj.product.product_description|truncatechars_html:20 }}</p>
-                                <div>
-                                    <p>{{ obj.product.product_price }} USD</p>
-                                </div>
-                            </div>
-                        </div>
+                        {% include "index_prod_view.html" %}
                     {% endif %}
                 {% endfor %}
             </div>
@@ -35,18 +24,7 @@
                 <div class="row">
                     {% for obj in object_list %}
                         {% if obj.product.product_type == "L" %}
-                            <div class="col-sm-4">
-                                <div class="product-item">
-                                    <div>
-                                        <img src="{{ obj.image.url }}" class="img-responsive">
-                                    </div>
-                                    <h4><a href="{{ obj.get_absolute_url }}">{{ obj.product.product_name }}</a></h4>
-                                    <p>{{ obj.product.product_description|truncatechars_html:20 }}</p>
-                                    <div>
-                                        <p>{{ obj.product.product_price }} USD</p>
-                                    </div>
-                                </div>
-                            </div>
+                           {% include "index_prod_view.html" %}
                             </div>
                         {% endif %}
                     {% endfor %}
