--- a/src/products/templates/products/order_form.html
+++ b/src/products/templates/products/order_form.html
@@ -6,28 +6,43 @@
 {% block body %}
     <div class="container">
         <div class="row">
-        <form></form>
             <div class="col-lg-12">
                 <h3 class="text-center">You order:</h3>
-                <h5 class="text-center">Total prise: {{ total_price }}</h5>
-                <ul class="list-group">
-                    {% for product in products_in_basket %}
-                    <li class="list-group-item d-flex justify-content-between align-items-center">
-                         {{ product.product.product_name }}
-                        <span class="badge badge-primary badge-pill">{{ product.product.product_price }} BYN</span>
-                    </li>
-                    {% endfor %}
-                </ul>
-            </div>
-        </div>
+                <h5 class="text-center">Total price: {{ total_price }} BYN</h5>
+                <form class="form-horizontal" method="post">{% csrf_token %}
+                    <div class="col-lg-5">
+                        <div class="form-group">
+                            <label>Your name</label>
+                            <span class="badge badge-pill badge-danger">{{ form.name.errors }}</span>
+                            <input type="text" name="{{ form.name.html_name }}" class="form-control"
+                                   value="{{ request.POST.name }}">
+                        </div>
+                    </div>
 
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="text-left">
-                   <button type="submin" class="btn btn-primary btn-lg">Order</button>
-                </div>
+                    <div class="col-lg-5">
+                        <div class="form-group">
+                            <label>Your phone</label>
+                            <span class="badge badge-pill badge-danger">{{ form.phone.errors }}</span>
+                            <input type="text" name="{{ form.phone.html_name }}" class="form-control"
+                                   value="{{ request.POST.phone }}">
+                        </div>
+                    </div>
+                    <ul class="list-group">
+                        {% for product in products_in_basket %}
+                            <li class="list-group-item d-flex justify-content-between align-items-center">
+                                {{ product.product.product_name }}
+                                <input class="d-none" value="{{ product.id }}" type="number"
+                                       name="product_in_basket_{{ product.id }}">
+                                <span class="badge badge-primary badge-pill">{{ product.product.product_price }} BYN</span>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                    <div class="text-left">
+                        <button type="submin" class="btn btn-primary btn-lg">Order</button>
+                    </div>
+                </form>
             </div>
+
         </div>
-    </form>
     </div>
 {% endblock %}
