--- a/src/products/templates/products/order_form.html
+++ b/src/products/templates/products/order_form.html
@@ -7,13 +7,13 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                {% if  user.profile is None  %}
+                 {% if  user.profile is None  %}
                 <h3 class="text-center">Thanks for you order, Stranger</h3>
                 {% else %}
                  <h3 class="text-center">Thanks for you order, {{ user.profile.Name }}</h3>
             {% endif %}
                 <h5 class="text-center">Total price: {{ total_price }} BYN</h5>
-                <form class="form-horizontal" method="post" action="{% url 'products:thanks' %}">{% csrf_token %}
+                <form class="form-horizontal" method="post">{% csrf_token %}
                     <div class="col-lg-5">
                         <div class="form-group">
                             <label>Your name</label>
@@ -59,7 +59,7 @@
                         {% endfor %}
                     </ul>
                     <div class="text-left">
-                        <button type="submit" class="btn btn-primary btn-lg">Order</button>
+                        <button type="submin" class="btn btn-primary btn-lg">Order</button>
                     </div>
                 </form>
             </div>
