--- a/src/products/templates/products/order_list.html
+++ b/src/products/templates/products/order_list.html
@@ -14,7 +14,7 @@
   <tbody>
     <tr>
       <td>{{ obj.product.product_name }}</td>
-      <td>{{ obj.product.product_price }} BYN</td>
+      <td>{{ obj.price }} BYN</td>
       <td>{{ obj.created }}</td>
     </tr>
   </tbody>
