--- a/src/products/templates/products/order_list.html
+++ b/src/products/templates/products/order_list.html
@@ -1,7 +1,7 @@
 {% extends "__base.html" %}
 {% block title %}Order History{% endblock %}
 {% block body %}
-    <h1>Order_history</h1>
+    <h1 align="center">Order history</h1>
     <thead>
     <tr>
       <th scope="col">Name</th>
