--- a/src/products/templates/products/order_form.html
+++ b/src/products/templates/products/order_form.html
@@ -9,7 +9,7 @@
             <div class="col-lg-12">
                  {% if  user.profile is None  %}
                     <h3 class="text-center">Thanks for you order, Stranger</h3>
-                {% elif user.profile.name is None %}
+                {% elif user.profile.Name is None %}
                     <h3 class="text-center">Thanks for you order, Stranger</h3>
                  {% else %}
                     <h3 class="text-center">Thanks for you order, {{ user.profile.Name }}</h3>
